@@ -17,7 +17,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.20
+Release: 0.21
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -515,6 +515,9 @@ fi
 %{__prefix}/include/popt.h
 
 %changelog
+* Mon Jun  3 2002 Jeff Johnson <jbj@redhat.com>
+- python: include rpmdb module, renamed from bsddb3.
+
 * Sat Jun  1 2002 Jeff Johnson <jbj@redhat.com> 4.1-0.20
 - fix: use getgrnam, not getpwnam, to convert gid -> group.
 - fix: avoid sign extension, use only 16 bits, when verifying rdev.
