@@ -125,6 +125,7 @@
 	- fix: avoid sign extension, use only 16 bits, when verifying rdev.
 	- python: separate {add,del}Macro methods, prepare for macro dictionary.
 	- i18n: copy current production PO files to top-of-stack.
+	- python: include rpmdb module, renamed from bsddb3.
 
 4.0.3 -> 4.0.4:
 	- solaris: translate i86pc to i386 (#57182).
